facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_multiple_subcommands.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: only one field may be marked with #[facet(args::subcommand)] at this level
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct MultipleSubcommands {
   │        ─────────┬─────────  
   │                 ╰─────────── defined at facet-args/src/schema/tests.rs:82
   │ 
 4 │     a: SubA,
   │     ───┬───  
   │        ╰───── first marked here
   │ 
 6 │     b: SubB,
   │     ───┬───  
   │        ╰───── also marked here
 7 │ }
   │ ┬  
   │ ╰── end of definition
───╯
